# blaise-connect

./: .gitignore  AGENTS.md  README.md  compose.yaml
backend/: .dockerignore  Dockerfile.backend  pyproject.toml
backend/app/: main.py
backend/app/core/: __init__.py  account_locked_error.py  authentication.py  base.py  database.py  security.py  session_cookie_config.py
backend/app/models/: __init__.py  account.py  auth_session.py
backend/app/routes/: __init__.py  accounts.py  auth.py  health.py
backend/app/schemas/: __init__.py  account.py  account_create.py  account_response.py  account_role.py  account_update.py  auth.py  current_account_response.py  login_request.py  login_response.py  registration_number.py
backend/app/services/: __init__.py  account_service.py  auth_service.py  session_service.py
backend/tests/: __init__.py
backend/tests/services/: __init__.py  test_auth_service.py  test_session_service.py
database/docs/: MIGRATION_001_SYNTHESE.md  RAPPORT_SECURITE_BD.md
database/migration/: 001_create_accounts_and_profiles.sql  002_create_auth_sessions.sql
docs/: carnet-de-stage.md
docs/administration/: journal-des-decisions-blaiseconnect.md  product-backlog-blaiseconnect-v0.1.md  sprint-planning-blaiseconnect-5-semaines.md
docs/diagramme/: diagrame_Agile.mmd  diagrame_classe.plantuml  diagrame_database.plantuml
docs_administration_projet/: journal-des-decisions-blaiseconnect.md
frontend/: .dockerignore  Dockerfile.frontend  vite.config.js
frontend/src/: main.jsx
frontend/src/pages/: accounts_page.jsx  login_page.jsx
(+5 files in other folders)
